k8s/homeassistant/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homeassistant
  labels:
    app: homeassistant
spec:
  replicas: 1
  selector:
    matchLabels:
      app: homeassistant
  template:
    metadata:
      labels:
        app: homeassistant
    spec:
      hostNetwork: true
      containers:
        - name: homeassistant
          image: homeassistant/home-assistant:stable
          ports:
            - name: http
              containerPort: 8123
          volumeMounts:
            - name: server2
              mountPath: /config
              subPath: homeassistant
      volumes:
        - name: server2
          persistentVolumeClaim:
            claimName: server2
