k8s/homeassistant/endpoint.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: homeassistant
subsets:
  - addresses:
      - ip: 192.168.86.149
    ports:
      - name: http
        port: 8123
